resilient/tests/snapshots/diagnostics_snapshots__typecheck_undefined_variable@typecheck_undefined_variable.snap
---
source: resilient/tests/diagnostics_snapshots.rs
assertion_line: 159
description: "fn main(int _d) {\n    return x;\n}\nmain(0);\n"
expression: output
---
Running type checker...
Type error: <tmp>.rs:2:13: Undefined variable 'x' at 2:13
<tmp>.rs:2:13: Undefined variable 'x' at 2:13
Type error: Undefined variable 'x' at 2:13
       return x;
               ^
Error: Type check failed: <tmp>.rs:2:13: Undefined variable 'x' at 2:13
